err/pypdflite.err
Listing '.'...
Listing './bin'...
Compiling './bin/runexamples.py'...
***   File "./bin/runexamples.py", line 29
    print "Running TextTest"
                           ^
SyntaxError: Missing parentheses in call to 'print'

Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/PyPDFLite-0.1.40.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pypdflite'...
Compiling './lib/python3.5/site-packages/pypdflite/pdfdocument.py'...
***   File "./lib/python3.5/site-packages/pypdflite/pdfdocument.py", line 234
    print PDFTTFont.available_fonts()
                  ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pypdflite/pdfobjects'...
Compiling './lib/python3.5/site-packages/pypdflite/pdfobjects/ttfonts.py'...
***   File "./lib/python3.5/site-packages/pypdflite/pdfobjects/ttfonts.py", line 639
    print "cmap value too big/small: %s" % cm
                                       ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
